# tilefold-lang

./: AGENTS.md  dune-project  tilefold.opam
docs/: compatibility.md  core-semantics.md  design-space.md  execution-model.md  execution-trace.md  language-goals.md  language-spec.md  open-questions.md  program-package-serialization.md  surface-geometry-inference.md  surface-symbolic-relations.md  totality-audit.md
docs/decisions/: 0001-core-computation-model.md  0002-experimental-semantics-profiles.md  0003-function-templates-instances-and-folding.md  0004-spatial-surface-semantics.md  0005-deterministic-scheduler-and-priority-spine.md  0006-unit-and-entry-function-program-model.md  0007-arbitrary-precision-nat.md  0008-explicit-port-graph-and-validation-boundary.md  0009-canonical-default-node-order.md  0010-first-runtime-interpreter-vertical-slice.md  (+18 more)
lib/: canonical_trace.ml  canonical_trace.mli  core_graph.ml  core_graph.mli  core_type.ml  core_type.mli  dune  engine.ml  engine.mli  linear_v0.ml  linear_v0.mli  nat.ml  nat.mli  program_package.ml  program_package.mli  program_package_serialization.ml  program_package_serialization.mli  rewrite_event.ml  rewrite_event.mli  runtime_value.ml  runtime_value.mli  surface_geometry.ml  surface_geometry.mli  surface_symbolic.ml  surface_symbolic.mli  tilefold.ml
test/: dune  test_canonical_trace.ml  test_core_graph.ml  test_engine.ml  test_linear_v0.ml  test_nat.ml  test_program_package.ml  test_program_package_serialization.ml  test_scaffold.ml  test_surface_geometry.ml  test_surface_symbolic.ml
